POR/RefEdge/src/objects/Microsite__c.object
<CustomObject>
    <description>Content Sharing (Bound 4)</description>
    <fields>
        <fullName>Available_for_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Use?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_image__c</fullName>
        <label>Banner image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_Title_Color__c</fullName>
        <label>Document Title Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Copy_Alignment__c</fullName>
        <label>Footer Copy Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Footer_Copy_Color__c</fullName>
        <label>Footer Copy Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Copy_Size__c</fullName>
        <label>Footer Copy Size</label>
        <picklist>
            <picklistValues>
                <fullName>8px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16px</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Footer_Copy__c</fullName>
        <label>Footer Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Link__c</fullName>
        <label>Footer Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Background_Color__c</fullName>
        <label>Header Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Copy_Alignment__c</fullName>
        <label>Header Copy Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Header_Copy_Color__c</fullName>
        <label>Header Copy Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Copy_Size__c</fullName>
        <label>Header Copy Size</label>
        <picklist>
            <picklistValues>
                <fullName>8px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16px</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Header_Copy__c</fullName>
        <label>Header Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Alignment__c</fullName>
        <label>Image Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Page_Color__c</fullName>
        <label>Page Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos; + $Setup.POR_App_Configuration__c.Namespace__c + &apos;PreviewMicrositeNew?micrositeId=&apos; + Id + &apos;&amp;samplePreview=true&apos;, &apos;Preview Microsite&apos;)</formula>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Link_Copy__c</fullName>
        <defaultValue>&quot;Rate&quot;</defaultValue>
        <label>Rate Link Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Link_Copy__c</fullName>
        <defaultValue>&quot;Share&quot;</defaultValue>
        <label>Share Link Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Header_Copy_Alignment__c</fullName>
        <label>Sub Header Copy Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Header_Copy_Color__c</fullName>
        <label>Sub Header Copy Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Header_Copy_Size__c</fullName>
        <label>Sub Header Copy Size</label>
        <picklist>
            <picklistValues>
                <fullName>8px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16px</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_header_Copy__c</fullName>
        <label>Sub header Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Microsite</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Language__c</columns>
        <columns>Available_for_Use__c</columns>
        <columns>Rate_Link_Copy__c</columns>
        <columns>Share_Link_Copy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Microsite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Microsites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>